# mse-mlops

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  compose.yaml  data.dvc  index.html  main.py  mkdocs.yml  mlflow.db  objects.inv  pyproject.toml  sitemap.xml
.dvc/: config  config.local-example
.github/workflows/: deploy-docs.yml  main.yml
.kaggle/: kaggle.example.json
config/: split.yaml  train.yaml  tune.yaml
data/: README.md  index.html
data/raw/: README.md
data/raw/melanoma_cancer_dataset/: README.md
docker/: api.Dockerfile  mlflow.Dockerfile  train.Dockerfile  ui.Dockerfile
docs/: README.md  data.md  flywheel.md  index.md  mlflow-tracking.md  modules.md  pipeline.md  ray-tune.md  serving-architecture.md  serving.md
flywheel/: index.html
mlflow-tracking/: index.html
models/finetuned/dinov3_ham10000/: best_model.pt.dvc
models/pretrained/: .gitignore  dinov3-vits16-pretrain-lvd1689m.dvc
modules/: index.html
notebooks/: README.md  melanoma_dataset_eda.ipynb
notebooks/EDA/: EDA_HAM_ISIC.ipynb  EDA_src.py
notebooks/EDA/EDA_HAM_ISIC/: index.html
notebooks/EDA/EDA_src/: index.html
notebooks/EDA/data/: all_lesion_images_mapping_HAM10000.csv  extended_HAM10000_metadata.csv
notebooks/ham10000/: data_processing.ipynb  eda.ipynb  ham10000_eda.ipynb
notebooks/ham10000/data_processing/: index.html
notebooks/ham10000/ham10000_eda/: ham10000_eda.ipynb  index.html
notebooks/melanoma_cancer_dataset/: eda.ipynb
notebooks/melanoma_cancer_dataset/eda/: index.html
notebooks/melanoma_cancer_dataset/kaggle_eda/: index.html  kaggle_eda.ipynb
notebooks/melanoma_dataset_eda/: index.html
pipeline/: index.html
ray-tune/: index.html
reports/feedback/promotions/: train_20260514110813.json
scripts/: README.md  data_processing.py  download_ham10000.sh  download_melanoma.sh  download_model.py  promote_feedback.py  serve_api.py  serve_ui.py  train.py  tune.py
search/: search_index.json
serving/: Architecture.md  README.md  compose.yml  index.html
serving-architecture/: index.html
serving/api/: Dockerfile  README.md  main.py  model.py  pyproject.toml
serving/ui/: Dockerfile  README.md  app.py  pyproject.toml
src/mse_mlops/: curation.py  data_processing.py  modeling.py  paths.py  train.py  tune.py
src/mse_mlops/analysis/: __init__.py  ham10000.py  melanoma_dataset.py
src/mse_mlops/serving/: api.py  feedback_store.py  inference.py  launchers.py  ui.py
src/mse_mlops/tracking/: __init__.py  mlflow_tracker.py
tests/: test_curation.py  test_data_processing.py  test_download_model.py  test_feedback_store.py  test_foo.py  test_ham10000_analysis.py  test_melanoma_dataset_analysis.py  test_mlflow_tracker.py  test_paths.py  test_repo_contract.py  test_serving_inference.py  test_train.py  test_train_script.py  test_tune.py  test_tune_script.py
